fixed: dark mode color bug

--- a/about-me/src/app/globals.css
+++ b/about-me/src/app/globals.css
@@ -3,13 +3,6 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 ::-webkit-scrollbar {
   display: none;
 }
@@ -33,12 +26,6 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 .fadeIn {
